--- a/bucksley/index.html
+++ b/bucksley/index.html
@@ -54,33 +54,33 @@
 
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr); ">
                         <img src="photo/1.jpg" style=" grid-area: 1/1/4/5; ">
-                    <a href="#" class="slider_href" style="color: white; text-decoration: white; font-size: 40px;    grid-area: 1/1/4/5;   ">
+                    <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 1/1/4/5;   ">
                         <p>Арома</p>
                     </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
                         <img src="photo/2.jpg" style=" grid-area: 1/1/4/5; " >
-                        <a href="#" class="slider_href" style="color: white; text-decoration: white; font-size: 40px;   grid-area: 1/1/4/5;   ">
+                        <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 1/1/4/5;   ">
 
                                 <p>Арома</p>
-                            <p2  style="font-size: 20px;  "  >Найкраща кава для вас. Відбірні сорти найкращих зерен.</p2>
+                            <p2>Найкраща кава для вас. Відбірні сорти найкращих зерен.</p2>
                         </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
                         <img src="photo/3.jpg" style=" grid-area: 1/1/4/5; " >
-                        <a href="#" class="slider_href" style="color: white; text-decoration: white; font-size: 40px;    grid-area: 1/1/4/5;   ">
+                        <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 1/1/4/5;   ">
                             <p>Арома</p>
                         </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
                         <img src="photo/4.jpg" style=" grid-area: 1/1/4/5; " >
-                        <a href="#" class="slider_href" style="color: white; text-decoration: white; font-size: 40px;    grid-area: 1/1/4/5;   ">
+                        <a href="#" class="slider_href" style="color: white; text-decoration: white;     grid-area: 1/1/4/5;   ">
                             <p>Арома</p>
                         </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
                         <img src="photo/5.jpg" style=" grid-area: 1/1/4/5; " >
-                        <a href="#" class="slider_href" style="color: white; text-decoration: white; font-size: 40px;   grid-area: 1/1/4/5;   ">
+                        <a href="#" class="slider_href" style="color: white; text-decoration: white;   grid-area: 1/1/4/5;   ">
                             <p>Арома</p>
                         </a>
                     </article>
