--- a/bucksley/index.html
+++ b/bucksley/index.html
@@ -56,6 +56,7 @@
                         <img src="photo/1.jpg" style=" grid-area: 1/1/4/5; ">
                     <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 1/1/4/5;   ">
                         <p>Арома</p>
+                        <p2>Темний кокос. Спробуй</p2>
                     </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
@@ -63,7 +64,7 @@
                         <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 1/1/4/5;   ">
 
                                 <p>Арома</p>
-                            <p2>Найкраща кава для вас. Відбірні сорти найкращих зерен.</p2>
+                            <p2>Найкраща кава для вас. Відбірні сорти найкращих зерен. Відбірні сорти цитрусових та апельсинових.</p2>
                         </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
