--- a/project_bucksley/index.html
+++ b/project_bucksley/index.html
@@ -60,8 +60,8 @@
                     </a>
                     </article>
                     <article style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);  ">
-                        <img src="photo/2.jpg" style=" grid-area: 1/1/4/5; " >
-                        <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 1/1/4/5;   ">
+                        <img src="photo/2.jpg" style="grid-area: 1/1/4/4" >
+                        <a href="#" class="slider_href" style="color: white; text-decoration: white;    grid-area: 2/1/3/4;   ">
 
                                 <p>Арома</p>
                             <p2>Найкраща кава для вас. Відбірні сорти найкращих зерен. Відбірні сорти цитрусових та апельсинових.</p2>
